podcast content added

--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Tyler Childs
+title: Dude, Where's My Podcast?
 email: tylerwchilds@gmail.com
 description: >
-  This is the final destination for my personal website.
-  It's as complex as it will ever need to be and
-  there are better things for me to do, to learn and explore.
-  There's an entire world out there beyond the boxes
-  we tend to put everything into
+  The Dude, Where's My Podcast? Podcast is a pop-culture blog
+  that was founded in 2005 or 2006. We really don't remember.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://tylerchilds.com" # the base hostname & protocol for your site
-tagline: A Web Developer &amp; Designer
+url: "http://dwmpp.tylerchilds.com" # the base hostname & protocol for your site
+paginate: 7
+paginate_path: "posts/:num"
 
 # Build settings
 markdown: kramdown
