--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,10 @@ description: >
   that was founded in 2005 or 2006. We really don't remember.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://dwmpp.tylerchilds.com" # the base hostname & protocol for your site
-paginate: 7
+paginate: 4
 paginate_path: "posts/:num"
+
+permalink: pretty
 
 # Build settings
 markdown: kramdown
