--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,14 @@ description: >
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://dwmpp.tylerchilds.com" # the base hostname & protocol for your site
 paginate: 4
-paginate_path: "posts/:num"
-
-permalink: pretty
 
 # Build settings
 markdown: kramdown
+permalink: pretty
+
+# Jekyll plugins
+gems:
+- jekyll-mentions
+- jekyll-redirect-from
+
+jekyll-mentions: https://twitter.com
